    HAMA-19: Remove vector-norms enum to interface 
               from implementation (edwardyoon)
    HAMA-17: Vector to Writable conversion (edwardyoon)
    HAMA-15: Logo Alignment (edwardyoon) 
    HAMA-10: Refactor the mapred package 
               for the latest version of dependencies (edwardyoon)  
    HAMA-9: Upgrade dependencies (edwardyoon)

  BUG FIXES
  
    HAMA-307: BSPMaster - job ID counter is not read and updated atomically
                      (Filipe Manana via edward)
    HAMA-305: Redundant use of synchronize keyword (Filipe Manana via edward)
    HAMA-301: Fix unit test fail bug (edwardyoon)
    HAMA-303: slave.host.name is superceded by bsp.peer.hostname 
                (Filipe Manana via edwardyoon)
    HAMA-296: Fix warning about deprecated method (edwardyoon)
    HAMA-291: bsp.groom.port is unnused and superseeded 
                       by bsp.peer.port (Filipe Manana via edwardyoon)
    HAMA-288: Typo might lead to null tasks getting assigned 
                       to groom servers (Filipe Manana via edwardyoon)
    HAMA-280: Fix warnings (Filipe Manana via edwardyoon)
    HAMA-270: wrong sequence of readFields() of ClusterStatus (hyunsik)
    HAMA-260: Current version command of script is linked unknown class 
                (edwardyoon)
    HAMA-250: Add --no-check-certificate option to 'wget' command lines 
                (edwardyoon)
    HAMA-242: Wrong assignment of default setting inside BSPPeer constructor 
                (hyunsik)
    HAMA-246: Current shell scripts for bsp daemon have several problems. 
                (hyunsik)
    HAMA-238: Example fail when performing sparse matrices addition (edwardyoon)
    HAMA-225: Jacobi iteration is in a infinite loop (edwardyoon)
    HAMA-214: Can't run the examples (edwardyoon)
    HAMA-190: Bug in Matrix-Vector multiplication (edwardyoon)
    HAMA-183: When we construct the matrix, 
                dimensions should be defined. (edwardyoon)