@@ -46,38 +46,6 @@ public class HamaConfiguration extends Configuration {
   }
 
   /**
-   * Sets the number of map task
-   * 
-   * @param map
-   */
-  public void setNumMapTasks(int map) {
-    set("mapred.map.tasks",String.valueOf(map));
-  }
-
-  /**
-   * Sets the number of reduce task
-   * 
-   * @param reduce
-   */
-  public void setNumReduceTasks(int reduce) {
-    set("mapred.reduce.tasks",String.valueOf(reduce));
-  }
-  
-  /**
-   * Gets the number of map task
-   */
-  public int getNumMapTasks() {
-    return Integer.parseInt(get("mapred.map.tasks"));
-  }
-
-  /**
-   * Gets the number of reduce task
-   */
-  public int getNumReduceTasks() {
-    return Integer.parseInt(get("mapred.reduce.tasks"));
-  }
-  
-  /**
    * Adds Hama configuration files to a Configuration
    */
   private void addHamaResources() {
