@@ -171,6 +171,7 @@ Trunk (unreleased changes)
 
   BUG FIXES
   
+    HAMA-314: Remove unnecessary methods from HamaConfiguration (edwardyoon)
     HAMA-307: BSPMaster - job ID counter is not read and updated atomically
                       (Filipe Manana via edward)
     HAMA-305: Redundant use of synchronize keyword (Filipe Manana via edward)
